node-http part 2

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,6 @@
     </head>
     <body>
         <h1>Index</h1>
-        <p>All i want for christmas is to be super intelligent, a visionary and the best coder</p>
+        <p>All i want for christmas is to be super intelligent, a visionary and the best at coding</p>
     </body>
 </html>
